--- a/src/styles/setup/_variables.scss
+++ b/src/styles/setup/_variables.scss
@@ -11,6 +11,7 @@ $grey-dark: hsl(210, 5%, 39%);
 $grey-darker: hsl(210, 5%, 12%);
 
 $primary: hsl(205, 98%, 45%);
+$secondary: hsl(5, 100%, 60%);
 
 $fs-body: 16px;
 $fs-title: 24px;
@@ -18,4 +19,4 @@ $fs-heading: 32px;
 
 $ff-body: 'Open Sans', -apple-system, BlinkMacSystemFont, Roboto, 'Helvetica Neue', 
   Helvetica, Tahoma, Arial, sans-serif;
-$ff-heading: 'Poppins', 'Trebuchet MS', serif;
+$ff-heading: 'Poppins', 'Trebuchet MS', sans-serif;
